# notes-zome

./: 404.html  README.md  eslint.config.js  flake.nix  hashmap.json  index.html  introduction.html  notes-store.html  package.json  pnpm-lock.yaml  setup.html  tsconfig.json
assets/: app.CVzzZfDj.js  app.DGmP0RVq.js  elements_all-notes.md.CXRJ-Z0U.js  elements_all-notes.md.CXRJ-Z0U.lean.js  elements_all-notes.md.ChXiBXig.js  elements_all-notes.md.ChXiBXig.lean.js  elements_all-notes.md.CkahkdkJ.js  elements_all-notes.md.CkahkdkJ.lean.js  elements_all-notes.md.DPxgbCm0.js  elements_all-notes.md.DPxgbCm0.lean.js  elements_note-detail.md.8B01RjGA.js  elements_note-detail.md.8B01RjGA.lean.js  elements_note-detail.md.BN3M6OjO.js  elements_note-detail.md.BN3M6OjO.lean.js  elements_note-detail.md.Dr2U96kt.js  elements_note-detail.md.Dr2U96kt.lean.js  elements_note-detail.md.jFpGQKTU.js  elements_note-detail.md.jFpGQKTU.lean.js  elements_note-summary.md.B1wS6E7j.js  elements_note-summary.md.B1wS6E7j.lean.js  elements_note-summary.md.CG8uywjJ.js  elements_note-summary.md.CG8uywjJ.lean.js  elements_note-summary.md.DNf4aWEe.js  elements_note-summary.md.DNf4aWEe.lean.js  elements_note-summary.md.Ds_Uutmp.js  elements_note-summary.md.Ds_Uutmp.lean.js  index.md.DfiMDkf1.lean.js  introduction.md.BUrAXjn9.lean.js  notes-store.md.TQWNru-a.js  notes-store.md.TQWNru-a.lean.js  public_backend_doc_static.files_SourceSerif4-LICENSE-3bb119e13b1258b7.md.BzaE8yZ9.js  (+4 more)
zomes/integrity/notes/: Cargo.toml  zome.nix
zomes/integrity/notes/src/: incremental_changes.rs  lib.rs  note.rs
(+404 files in other folders)
