[package]
name = "notes_integrity"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "notes_integrity"

[dependencies]
hdi = { workspace = true }

serde = { workspace = true }
# automerge = { git = "https://github.com/automerge/automerge", branch = "main" }
# autosurgeon = { git = "https://github.com/automerge/", default-features = false }
# getrandom = "0.2"
